--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 # Temporary and binary files
 .DS_Store
 
-# Deprecated functions older
-"src/deprecated"
+# Deprecated functions folder
+src/deprecated/
 
 # Session Data files
 .RData
